fix video thumbnail on mobile after 3419490129c350a7d8e760cf44f5b24e204cea07
It was zoomed in too much.

--- a/src/Videos.css
+++ b/src/Videos.css
@@ -307,6 +307,7 @@
 	.video-entry-information {
 		grid-template-rows: none;
 		margin-top: -20px;
+		z-index: 0;
 	}
 
 	.video-entry-title {
@@ -326,5 +327,6 @@
 
 	.video-entry-preview > img {
 		height: auto;
+		width: 100%;
 	}
 }
